--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,15 @@ section{
     position: relative;
 }
 
+footer{
+    max-width: 99rem;
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+}
+
+
 @media (max-width: 1440px) {
     section {
         padding-left: 1rem;
@@ -315,6 +324,8 @@ section{
     );
     cursor: pointer;
     padding: 0.2rem;
+
+    width: fit-content;
 }
 
 .button{
@@ -1920,13 +1931,6 @@ section{
     justify-content: flex-end;
 }
 
-@media (max-width: 1440px) {
-    .info__wrapper {
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
-}
-
 @media (max-width: 1024px) {
     .info__wrapper {
         justify-content: center;
@@ -1948,6 +1952,7 @@ section{
 @media (max-width: 1024px) {
     .info__container{
         margin-right: 0;
+        padding: 2.5rem 2.5rem 2.5rem 2.5rem;
     }
 }
 
@@ -1960,14 +1965,14 @@ section{
 
 .info__title{
     font-family: Inter-ExtraBold-woff, serif;
-    font-size: clamp(2rem, 3rem, 3.5rem);
+    font-size: clamp(2rem, 2.5vw, 3rem);
     letter-spacing: 0.14rem;
 }
 
 .info__text{
     font-family: Inter-Regular-woff, serif;
-    font-size: clamp(0.7rem, 1.4rem, 5rem);
-    line-height: 2.5rem;
+    font-size: clamp(0.7rem, 2.5vw, 1.4rem);
+    line-height: clamp(1.5rem, 2.5vw, 2.5rem);
     letter-spacing: 0.07rem;
 }
 
@@ -1976,15 +1981,149 @@ section{
     gap: 2.4rem;
 
     font-family: Inter-Regular-woff, serif;
-    font-size: clamp(0.7rem, 1.4rem, 5rem);
+    font-size: clamp(0.7rem, 2.5vw, 1.4rem);
     line-height: 2.5rem;
     letter-spacing: 0.07rem;
+
 }
 
 .info__ico {
+    cursor: pointer;
+
     max-width: 1rem;
     max-height: 1rem;
 }
+
+/*form*/
+
+.form{
+    padding-top: 26.3rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 5.5rem;
+}
+
+
+@media (max-width: 1024px) {
+    .form{
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+
+.form__picture{
+    max-height: 20.7rem;
+    height: 100%;
+    max-width: 50.2rem;
+    width: 100%;
+
+    inset: 0;
+    z-index: -1;
+    overflow: hidden;
+
+}
+
+@media (max-width: 1024px) {
+    .form__picture{
+        max-height: 40rem;
+        order: 2;
+        padding-top: 2rem;
+
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.form__picture-img{
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    object-fit: cover;
+    object-position: center;
+}
+
+.form__wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 3.4rem;
+
+    padding-bottom: 0.5rem;
+}
+
+@media (max-width: 1024px) {
+    .form__wrapper{
+        order: 1;
+        max-height: 25rem;
+    }
+}
+
+.form__title{
+    font-family: Orbitron-Bold-woff, serif;
+    font-size: clamp(2rem, 2.84rem, 3.5rem);
+}
+
+.form__sub{
+    font-family: Inter-Regular-woff, serif;
+    font-size: clamp(0.7rem, 1.4rem, 2rem);
+    line-height: 2.5rem;
+}
+
+.form__container{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+}
+
+@media (max-width: 575px) {
+    .form__container{
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+    }
+}
+
+.form__form{
+    font-family: Inter-Regular-woff, serif;
+    font-size: clamp(0.7rem, 1.2rem, 2rem);
+
+    padding: 1.2rem 1.1rem;
+
+
+    border: none;
+    border-radius: 0.4rem 0 0 0.4rem;
+}
+
+.form__button-container{
+    border-radius: 0 0.4rem 0.4rem 0;
+}
+
+.form__button{
+    font-family: Inter-Medium-woff, serif;
+    font-size: clamp(0.7rem, 1.2rem, 2rem);
+    padding: 1rem 2.3rem;
+    border-radius: 0 0.4rem 0.4rem 0;
+}
+
+/*footer*/
+
+.footer{}
+
+.footer:before{
+    content: '';
+    position: absolute;
+
+    width: 100%;
+    height: 0.3rem;
+
+
+    background-color: rgba(255,255,255,0.3);
+}
+
 
 .test{
     padding-top: 100vh;
